// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create and remove reaction: Respected 1`] = `
<button
  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <span>
    Respected
  </span>
  <span>
    1
  </span>
</button>
`;

exports[`create and remove reaction: Unrespected 1`] = `
<button
  className="BaseButton-root Button-root Button-sizeSmall Button-colorRegular Button-variantGhost"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <span>
    Respect
  </span>
</button>
`;
